--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -18,7 +18,7 @@
             <form action="/auth/register" method="POST">
                 <div class="form-group">
                     <input type="text" class="register-form-control" name="name" 
-                           placeholder="Введите ФИО пользователя" 
+                           placeholder="Как вас зовут?" 
                            value="{{formData.name}}" required>
                 </div>
                 <div class="form-group">
